# sarra

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  global.d.ts  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
components/: BentoGrid.tsx  Footer.tsx  GameCard.tsx  Navbar.tsx  StateTicker.tsx
docs/: agent-streaming-api.md  api-agent.md  cloud-agent-contract.md  continue-agent-contract.md  opencode-agent-contract.md  openhands-agent-contract.md
lib/: store.ts
scripts/: apply-caddy.sh  bootstrap.sh  install.sh  port-check.sh  restart.sh  start.sh  stop.sh  update.sh  upgrade-from-pr.sh
systemd/: syte.service
syte/: __init__.py  agent_activity.py  agent_activity_catalog.py  agent_artifacts.py  agent_cache.py  agent_config.py  agent_debug.py  agent_errors.py  agent_integration.py  agent_jobs.py  agent_manager.py  agent_memory.py  agent_metrics.py  agent_service.py  agent_skills.py  agent_turn.py  ai_providers.py  ai_spec.py  api_responses.py  api_router.py  auth.py  caddy_preview.py  caddy_routes.py  cdp_client.py  certificates.py  cloud_agent.py  cloud_agent_store.py  config.py  continue_agent.py  continue_extras.py  database.py  deployment.py  design_contract.py  design_linter.py  design_profile.py  docker_deploy.py  domain_utils.py  internal_api.py  local_session_store.py  log_stream.py  (+34 more)
tests/: test_agent_activity.py  test_agent_activity_catalog.py  test_agent_ai_improvements.py  test_agent_artifacts.py  test_agent_browser_and_stack.py  test_agent_cache.py  test_agent_debug.py  test_agent_jobs.py  test_agent_memory.py  test_agent_service.py  test_agent_sessions_api.py  test_agent_skills.py  test_agent_stream.py  test_agent_turn.py  test_agent_upgrades.py  test_ai_providers.py  test_ai_response_latency.py  test_audit_security_fixes.py  test_caddy_routes.py  test_cloud_agent.py  test_continue_agent.py  test_continue_extras.py  test_design_contract.py  test_docker_deploy.py  test_docker_limits.py  test_domain_utils.py  test_mcp_stdio.py  test_model_profile_honor.py  (+25 more)
(+14 files in other folders)
