[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "syte"
version = "0.2.0"
description = "Workspace deployment and publishing service for Ubuntu"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "openhands-agent-server==1.35.0",
    "openhands-sdk==1.35.0",
    "openhands-tools==1.35.0",
    "openhands-workspace==1.35.0",
    "websockets>=16.1",
    "opentelemetry-instrumentation==0.60b1",
    "opentelemetry-instrumentation-threading==0.60b1",
    "opentelemetry-semantic-conventions==0.60b1",
]

[project.scripts]
syte = "syte.main:app"

[tool.setuptools.packages.find]
include = ["syte*"]
